--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'net.ltgt.apt' version '0.19'
+    id 'net.ltgt.apt-idea' version '0.19'
 }
 
 group 'ch.zotteljedi'
@@ -10,9 +12,13 @@ repositories {
 }
 
 dependencies {
+
     compileOnly('javax:javaee-api:8.0.1')
 
-    implementation project(':data')
+    apt('org.immutables:value:2.8.2')
+    compileOnly('org.immutables:value:2.8.2:annotations')
+    compileOnly('org.immutables:builder:2.8.2')
+    compileOnly('org.immutables:gson:2.8.2:annotations')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
