--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'net.ltgt.apt' version '0.19'
+    id 'net.ltgt.apt-idea' version '0.19'
 }
 
 group 'ch.zotteljedi'
@@ -10,13 +12,11 @@ repositories {
 }
 
 dependencies {
-    //compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.20.Final'
     compile group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: '2.7.7'
-    // https://mvnrepository.com/artifact/us.hornerscorners.mojo/eclipselink-ddlgeneration-maven-plugin
     compile group: 'us.hornerscorners.mojo', name: 'eclipselink-ddlgeneration-maven-plugin', version: '1.8'
-
-
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.1.Final'
+    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
 
     compileOnly('javax:javaee-api:8.0.1')
 
