--- a/data/build.gradle
+++ b/data/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     compileOnly('javax:javaee-api:8.0.1')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile('org.assertj:assertj-core:3.11.1')
 }
