--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
     id 'war'
+    id 'net.ltgt.apt' version '0.19'
+    id 'net.ltgt.apt-idea' version '0.19'
 }
 
 group 'ch.zotteljedi'
