--- a/web/build.gradle
+++ b/web/build.gradle
@@ -17,6 +17,10 @@ dependencies {
     compileOnly('javax:javaee-api:8.0.1')
     implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.1.Final'
     annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
+    apt('org.immutables:value:2.8.2')
+    compileOnly('org.immutables:value:2.8.2:annotations')
+    compileOnly('org.immutables:builder:2.8.2')
+    compileOnly('org.immutables:gson:2.8.2:annotations')
     
     implementation project(':common')
 
