--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
     implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.1.Final'
     annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
+    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.2.Final'
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.4.21.Final'
 
     compileOnly('javax:javaee-api:8.0.1')
 
