--- a/data/build.gradle
+++ b/data/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     compileOnly('javax:javaee-api:8.0.1')
 
+    compile "org.hibernate:hibernate-validator:5.3.4.Final"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile('org.assertj:assertj-core:3.11.1')
 }
