--- a/data/build.gradle
+++ b/data/build.gradle
@@ -18,4 +18,5 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile('org.assertj:assertj-core:3.11.1')
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
 }
