--- a/web/build.gradle
+++ b/web/build.gradle
@@ -14,14 +14,18 @@ repositories {
 
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
-    compileOnly('javax:javaee-api:8.0.1')
+    compile "org.primefaces:primefaces:8.0"
+
     implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.1.Final'
     annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
+
     apt('org.immutables:value:2.8.2')
     compileOnly('org.immutables:value:2.8.2:annotations')
     compileOnly('org.immutables:builder:2.8.2')
     compileOnly('org.immutables:gson:2.8.2:annotations')
-    
+
+    compileOnly('javax:javaee-api:8.0.1')
+
     implementation project(':common')
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
