--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,12 +15,12 @@ dependencies {
 
     implementation 'org.jetbrains:annotations:19.0.0'
     implementation 'junit:junit:4.12'
-    compileOnly('javax:javaee-api:8.0.1')
+    compileOnly 'javax:javaee-api:8.0.1'
 
-    apt('org.immutables:value:2.8.2')
-    compileOnly('org.immutables:value:2.8.2:annotations')
-    compileOnly('org.immutables:builder:2.8.2')
-    compileOnly('org.immutables:gson:2.8.2:annotations')
+    apt 'org.immutables:value:2.8.2'
+    compileOnly 'org.immutables:value:2.8.2:annotations'
+    compileOnly 'org.immutables:builder:2.8.2'
+    compileOnly 'org.immutables:gson:2.8.2:annotations'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
