--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,15 +12,14 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: '2.7.7'
-    compile group: 'us.hornerscorners.mojo', name: 'eclipselink-ddlgeneration-maven-plugin', version: '1.8'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
-    implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.1.Final'
-    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
-    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.2.Final'
-    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.4.21.Final'
-
-    compileOnly('javax:javaee-api:8.0.1')
+    compile 'org.eclipse.persistence:org.eclipse.persistence.jpa:2.7.7'
+    compile 'us.hornerscorners.mojo:eclipselink-ddlgeneration-maven-plugin:1.8'
+    compile 'org.apache.logging.log4j:log4j-core:2.13.3'
+    implementation 'org.mapstruct:mapstruct-jdk8:1.3.1.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
+    compile 'org.hibernate:hibernate-entitymanager:5.4.21.Final'
+    compileOnly 'javax:javaee-api:8.0.1'
 
     implementation project(':common')
     implementation project(':data')
