--- a/core/build.gradle
+++ b/core/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     implementation project(':common')
     implementation project(':data')
 
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
