--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,4 +26,5 @@ dependencies {
 
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
 }
