--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.ltgt.apt-idea' version '0.19'
 }
 
-group 'ch.zotteljedi'
+group 'ch.cheorges'
 version '1.0-SNAPSHOT'
 
 repositories {
