--- a/web/build.gradle
+++ b/web/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'net.ltgt.apt-idea' version '0.19'
 }
 
-group 'ch.zotteljedi'
+group 'ch.cheorges'
 version '1.0-SNAPSHOT'
 
 repositories {
